# src/main/resources/static/swagger.yml
@@ -100,6 +100,108 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /users/register:
+    post:
+      tags:
+        - users
+      summary: Operation for register a new user through authenticated service request
+      description: This endpoint allows another service to register a new user by sending a JWT token generated by this auth-server in the Authorization header. ATTENTION, To use this endpoint, you need to configure the Authorization header as Bearer Token and paste the token received from auth-server.
+      operationId: postRegisterUserByService
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - name: applicationPublicId
+          in: header
+          required: true
+          description: Public UUID identifier of the application that owns this registration request.
+          schema:
+            type: string
+            format: uuid
+            example: d290f1ee-6c54-4b01-90e6-d701748f0851
+      responses:
+        '201':
+          description: User successfully registered.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SuccessResponse'
+        '401':
+          description: Unauthorized request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                invalidToken:
+                  summary: When the token is invalid for some reason.
+                  value:
+                    message: "Invalid token, please log in to continue."
+                    timestamp: "2024-12-08T19:30:00Z"
+        '403':
+          description: Access denied.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                accessDenied:
+                  summary: When the authenticated token does not have permission to access this resource.
+                  value:
+                    message: "Access denied for this resource."
+                    timestamp: "2024-12-08T19:30:00Z"
+        '404':
+          description: The application specified in the request was not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                applicationNotFound:
+                  summary: There is no registered application for the provided code.
+                  value:
+                    message: "Application not found"
+                    timestamp: "2024-12-08T19:30:00Z"
+        '409':
+          description: A user with the email address specified in the request already exists.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                emailExists:
+                  summary: Email already registered
+                  value:
+                    message: "Email already registered. Please log in or recover your password."
+                    timestamp: "2024-12-08T19:30:00Z"
+        '422':
+          description: Invalid formats in the request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                emailFormatInvalid:
+                  summary: Format email not valid
+                  value:
+                    message: "This email is in an unauthorized format."
+                    timestamp: "2024-12-08T19:30:00Z"
+                passwordFormatInvalid:
+                  summary: Format password not valid
+                  value:
+                    message: "Invalid password. The password must contain 8 to 12 characters, including numbers, special characters, and uppercase letters."
+                    timestamp: "2024-12-08T19:30:00Z"
+        '500':
+          description: Internal server error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                canNotSave:
+                  summary: When there is a problem that prevents data from being saved to the database.
+                  value:
+                    message: "Can't save user on database"
+                    timestamp: "2024-12-08T19:30:00Z"
   /users:
     post:
       tags:
